--- a/app/src/main/res/layout/activity_register_complant.xml
+++ b/app/src/main/res/layout/activity_register_complant.xml
@@ -24,4 +24,11 @@
         android:text="send"
         android:layout_marginTop="30dp"
         android:id="@+id/btn_send"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Default Complaint"
+        android:layout_marginTop="30dp"
+        android:id="@+id/defaultcomplaint"/>
 </LinearLayout>
